[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/base.tres" type="Theme" id=1]
[ext_resource path="res://scenes/settings_scene/settings_tabs_buttongroup.tres" type="ButtonGroup" id=2]
[ext_resource path="res://scripts/scene_scripts/setting_scene.gd" type="Script" id=3]

[node name="settings_scene" type="PanelContainer"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 3.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 420.0
margin_bottom = 473.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Title" type="Label" parent="VBC"]
margin_right = 413.0
margin_bottom = 14.0
theme = ExtResource( 1 )
text = "settings"
align = 1

[node name="Tab_Buttons" type="HBoxContainer" parent="VBC"]
margin_top = 18.0
margin_right = 413.0
margin_bottom = 38.0
theme = ExtResource( 1 )

[node name="Settings_Tab_Button" type="Button" parent="VBC/Tab_Buttons"]
margin_right = 63.0
margin_bottom = 20.0
theme = ExtResource( 1 )
toggle_mode = true
pressed = true
group = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video_Tab_Button" type="Button" parent="VBC/Tab_Buttons"]
margin_left = 67.0
margin_right = 115.0
margin_bottom = 20.0
theme = ExtResource( 1 )
toggle_mode = true
group = ExtResource( 2 )
text = "Video"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio_Tab_Button" type="Button" parent="VBC/Tab_Buttons"]
margin_left = 119.0
margin_right = 168.0
margin_bottom = 20.0
theme = ExtResource( 1 )
toggle_mode = true
group = ExtResource( 2 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouse_Tab_Button" type="Button" parent="VBC/Tab_Buttons"]
margin_left = 172.0
margin_right = 227.0
margin_bottom = 20.0
theme = ExtResource( 1 )
toggle_mode = true
group = ExtResource( 2 )
text = "Mouse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_Tabs" type="TabContainer" parent="VBC"]
margin_top = 42.0
margin_right = 413.0
margin_bottom = 418.0
size_flags_vertical = 3
theme = ExtResource( 1 )
tabs_visible = false
use_hidden_tabs_for_min_size = true

[node name="Settings_Tab" type="Tabs" parent="VBC/Settings_Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 1 )

[node name="Settings_Scroll" type="ScrollContainer" parent="VBC/Settings_Tabs/Settings_Tab"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_VBC" type="VBoxContainer" parent="VBC/Settings_Tabs/Settings_Tab/Settings_Scroll"]
margin_right = 405.0
margin_bottom = 72.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Settings_Tab/Settings_Scroll/Settings_VBC"]
margin_right = 405.0
margin_bottom = 40.0
theme = ExtResource( 1 )
text = "Debug"

[node name="RST_HSeparator" type="HSeparator" parent="VBC/Settings_Tabs/Settings_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 44.0
margin_right = 405.0
margin_bottom = 48.0

[node name="Reset_Button" type="Button" parent="VBC/Settings_Tabs/Settings_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 52.0
margin_right = 405.0
margin_bottom = 72.0
text = "Reset To Default"

[node name="Video_Tab" type="Tabs" parent="VBC/Settings_Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 1 )

[node name="Settings_Scroll" type="ScrollContainer" parent="VBC/Settings_Tabs/Video_Tab"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_VBC" type="VBoxContainer" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll"]
margin_right = 405.0
margin_bottom = 228.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll/Settings_VBC"]
margin_right = 319.0
margin_bottom = 40.0
theme = ExtResource( 1 )
text = "Fullscreen"

[node name="VSync_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 44.0
margin_right = 319.0
margin_bottom = 84.0
theme = ExtResource( 1 )
text = "V-Sync"

[node name="Borderless_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 88.0
margin_right = 319.0
margin_bottom = 128.0
theme = ExtResource( 1 )
text = "Borderless"

[node name="ResolutionAuto_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 132.0
margin_right = 319.0
margin_bottom = 172.0
theme = ExtResource( 1 )
text = "Auto Resolution"

[node name="Resolution_HBC" type="HBoxContainer" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 176.0
margin_right = 319.0
margin_bottom = 196.0
theme = ExtResource( 1 )

[node name="Resolution_Label" type="Label" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll/Settings_VBC/Resolution_HBC"]
margin_top = 3.0
margin_right = 105.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource( 1 )
text = "Resolution : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution_Option" type="OptionButton" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll/Settings_VBC/Resolution_HBC"]
margin_left = 109.0
margin_right = 319.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="RST_HSeparator" type="HSeparator" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 172.0
margin_right = 319.0
margin_bottom = 176.0

[node name="Reset_Button" type="Button" parent="VBC/Settings_Tabs/Video_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 68.0
margin_right = 319.0
margin_bottom = 88.0
text = "Reset To Default"

[node name="Audio_Tab" type="Tabs" parent="VBC/Settings_Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 1 )

[node name="Settings_Scroll" type="ScrollContainer" parent="VBC/Settings_Tabs/Audio_Tab"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_VBC" type="VBoxContainer" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll"]
margin_right = 405.0
margin_bottom = 220.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC"]
margin_right = 319.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource( 1 )
text = "Master"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master_HBC" type="HBoxContainer" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 44.0
margin_right = 319.0
margin_bottom = 60.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="Master_Slider" type="HSlider" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC/Master_HBC"]
margin_right = 262.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 1 )
min_value = -80.0
max_value = 0.0
value = -40.0
rounded = true
tick_count = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master_Value" type="Label" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC/Master_HBC"]
margin_left = 266.0
margin_right = 319.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.2
theme = ExtResource( 1 )
text = "dB"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 64.0
margin_right = 319.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource( 1 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_HBC" type="HBoxContainer" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 108.0
margin_right = 319.0
margin_bottom = 124.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="Music_Slider" type="HSlider" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC/Music_HBC"]
margin_right = 262.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 1 )
min_value = -80.0
max_value = 0.0
value = -40.0
rounded = true
tick_count = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_Value" type="Label" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC/Music_HBC"]
margin_left = 266.0
margin_right = 319.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.2
theme = ExtResource( 1 )
text = "dB"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FX_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 128.0
margin_right = 319.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource( 1 )
text = "FX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FX_HBC" type="HBoxContainer" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 172.0
margin_right = 319.0
margin_bottom = 188.0
theme = ExtResource( 1 )

[node name="FX_Slider" type="HSlider" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC/FX_HBC"]
margin_right = 262.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 1 )
min_value = -80.0
max_value = 0.0
value = -40.0
rounded = true
tick_count = 80

[node name="FX_Value" type="Label" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC/FX_HBC"]
margin_left = 266.0
margin_right = 319.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.2
theme = ExtResource( 1 )
text = "dB"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RST_HSeparator" type="HSeparator" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 172.0
margin_right = 319.0
margin_bottom = 176.0

[node name="Reset_Button" type="Button" parent="VBC/Settings_Tabs/Audio_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 68.0
margin_right = 319.0
margin_bottom = 88.0
text = "Reset To Default"

[node name="Mouse_Tab" type="Tabs" parent="VBC/Settings_Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 1 )

[node name="Settings_Scroll" type="ScrollContainer" parent="VBC/Settings_Tabs/Mouse_Tab"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_VBC" type="VBoxContainer" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll"]
margin_right = 405.0
margin_bottom = 290.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="HS_Label" type="Label" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_right = 319.0
margin_bottom = 14.0
text = "Horizontal Sensitivity"

[node name="Horizontal_HBC" type="HBoxContainer" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 18.0
margin_right = 319.0
margin_bottom = 34.0

[node name="Horizontal_Slider" type="HSlider" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC/Horizontal_HBC"]
margin_right = 262.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="Horizontal_Value" type="Label" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC/Horizontal_HBC"]
margin_left = 266.0
margin_top = 1.0
margin_right = 319.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Horizontal_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 38.0
margin_right = 319.0
margin_bottom = 78.0
text = "Horizontal Invert"

[node name="HSeparator_1" type="HSeparator" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 82.0
margin_right = 319.0
margin_bottom = 86.0

[node name="VS_Label" type="Label" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 90.0
margin_right = 319.0
margin_bottom = 104.0
text = "Vertical Sensitivity"

[node name="Vertical_HBC" type="HBoxContainer" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 108.0
margin_right = 319.0
margin_bottom = 124.0

[node name="Vertical_Slider" type="HSlider" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC/Vertical_HBC"]
margin_right = 262.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="Vertical_Value" type="Label" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC/Vertical_HBC"]
margin_left = 266.0
margin_top = 1.0
margin_right = 319.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Vertical_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 128.0
margin_right = 319.0
margin_bottom = 168.0
text = "Vertical Invert"

[node name="HSeparator_2" type="HSeparator" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 172.0
margin_right = 319.0
margin_bottom = 176.0

[node name="SS_Label" type="Label" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 180.0
margin_right = 319.0
margin_bottom = 194.0
text = "Scroll Sensitivity"

[node name="Scroll_HBC" type="HBoxContainer" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 198.0
margin_right = 319.0
margin_bottom = 214.0

[node name="Scroll_Slider" type="HSlider" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC/Scroll_HBC"]
margin_right = 262.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="Scroll_Value" type="Label" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC/Scroll_HBC"]
margin_left = 266.0
margin_top = 1.0
margin_right = 319.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Scroll_CheckButton" type="CheckButton" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 218.0
margin_right = 319.0
margin_bottom = 258.0
text = "Scroll Invert"

[node name="RST_HSeparator" type="HSeparator" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 172.0
margin_right = 319.0
margin_bottom = 176.0

[node name="Reset_Button" type="Button" parent="VBC/Settings_Tabs/Mouse_Tab/Settings_Scroll/Settings_VBC"]
margin_top = 68.0
margin_right = 319.0
margin_bottom = 88.0
text = "Reset To Default"

[node name="Apply" type="Button" parent="VBC"]
margin_top = 422.0
margin_right = 413.0
margin_bottom = 442.0
theme = ExtResource( 1 )
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="VBC"]
margin_top = 446.0
margin_right = 413.0
margin_bottom = 466.0
theme = ExtResource( 1 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}
